--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: amagnell <amagnell@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/19 12:00:39 by sadoming          #+#    #+#              #
-#    Updated: 2024/02/29 15:11:55 by amagnell         ###   ########.fr        #
+#    Updated: 2024/04/03 16:49:46 by sadoming         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
