--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,30 @@ readline/support/mkinstalldirs
 readline/support/shlib-install
 readline/support/shobj-conf
 readline/support/wcwidth.c
+minishell_tester1/bash.supp
+minishell_tester1/bonus
+minishell_tester1/bonus_bonus
+minishell_tester1/builtins
+minishell_tester1/extras
+minishell_tester1/local.supp
+minishell_tester1/loop.out
+minishell_tester1/os_specific
+minishell_tester1/pipes
+minishell_tester1/README.md
+minishell_tester1/redirects
+minishell_tester1/syntax
+minishell_tester1/tester
+minishell_tester1/wildcards
+minishell_tester1/.github/workflows/stale.yml
+minishell_tester1/manual_tests/heredoc
+minishell_tester1/manual_tests/mandatory
+minishell_tester1/manual_tests/not_mandatory
+minishell_tester1/manual_tests/signals
+minishell_tester1/test_files/empty
+minishell_tester1/test_files/file name with spaces
+minishell_tester1/test_files/infile
+minishell_tester1/test_files/infile_big
+minishell_tester1/test_files/invalid_permission
+minishell_tester1/test_files/loop
+minishell_tester1/test_files/loop.c
+minishell_test.log
