--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,54 @@ test_files/invalid_permission
 test_files/loop
 test_files/loop.c
 .DS_Store
+mpanic-main/.gitignore
+mpanic-main/&4
+mpanic-main/cleaner.c
+mpanic-main/echo
+mpanic-main/file
+mpanic-main/file2
+mpanic-main/filea
+mpanic-main/fileb
+mpanic-main/filec
+mpanic-main/mpanic.sh
+mpanic-main/README.md
+mpanic-main/.img/isatty.png
+mpanic-main/.img/mpanic_usage.png
+mpanic-main/.img/mpanic_v2.png
+mpanic-main/.img/mpanic_v3.png
+mpanic-main/.img/mpanic_v4.png
+mpanic-main/.img/mpanic.jpg
+mpanic-main/.img/panic.png
+mpanic-main/.img/test_example.gif
+mpanic-main/test/your_tests.txt
+mpanic-main/test/bonus/dir/dir.txt
+mpanic-main/test/bonus/echo/echo.txt
+mpanic-main/test/bonus/env/env.txt
+mpanic-main/test/bonus/exit/exit.txt
+mpanic-main/test/bonus/export/export.txt
+mpanic-main/test/bonus/parser/dollar.txt
+mpanic-main/test/bonus/parser/operators.txt
+mpanic-main/test/bonus/parser/quotes.txt
+mpanic-main/test/bonus/parser/spaces.txt
+mpanic-main/test/bonus/parser/syntax_error.txt
+mpanic-main/test/bonus/parser/tilde.txt
+mpanic-main/test/bonus/pipe/pipe.txt
+mpanic-main/test/bonus/pwd/pwd.txt
+mpanic-main/test/bonus/redirection/redirection.txt
+mpanic-main/test/bonus/status/status.txt
+mpanic-main/test/mandatory/dir/dir.txt
+mpanic-main/test/mandatory/echo/echo.txt
+mpanic-main/test/mandatory/env/env.txt
+mpanic-main/test/mandatory/exit/exit.txt
+mpanic-main/test/mandatory/export/export.txt
+mpanic-main/test/mandatory/parser/dollar.txt
+mpanic-main/test/mandatory/parser/quotes.txt
+mpanic-main/test/mandatory/parser/spaces.txt
+mpanic-main/test/mandatory/parser/syntax_error.txt
+mpanic-main/test/mandatory/parser/tilde.txt
+mpanic-main/test/mandatory/pipe/pipe.txt
+mpanic-main/test/mandatory/redirection/redirection.txt
+mpanic-main/test/mandatory/shlvl/shlvl.txt
+mpanic-main/test/mandatory/status/status.txt
+mpanic-main/test/panic/panic_mandatory/panic_mandatory.txt
+mpanic-main/test/panic/scapes/scapes.txt
