--- a/.gitignore
+++ b/.gitignore
@@ -246,4 +246,4 @@ mpanic-main/test/mandatory/shlvl/shlvl.txt
 mpanic-main/test/mandatory/status/status.txt
 mpanic-main/test/panic/panic_mandatory/panic_mandatory.txt
 mpanic-main/test/panic/scapes/scapes.txt
-Makefile sadomig
+Makefile sadoming
